--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ mybatis.mapper-locations=classpath:/mapper/**/*.xml
 
 #打印所有sql的日志：sql 参数 结果
 logging.level.com.haoyu.knowlagebase.mapper=trace
+
+# redis配置
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
