--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,10 @@
             <artifactId>java-jwt</artifactId>
             <version>3.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
