--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ logging.level.com.haoyu.knowlagebase.mapper=trace
 # redis配置
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
+
+# rocketmq配置
+rocketmq.name-server=127.0.0.1:9876
+rocketmq.producer.group=default
